--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Task_Play_Game_Activity"></activity>
         <activity android:name=".Task_Two_Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
