--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -36,6 +36,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //multiiDex
+    implementation 'com.android.support:multidex:1.0.3'
+    //recyceler View
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
     //retrofit
     implementation ('com.squareup.retrofit2:retrofit:2.1.0') {
@@ -47,4 +53,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
 
+    //circleImage
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //cardView
+    implementation "androidx.cardview:cardview:1.0.0"
 }
