--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //cardView
     implementation "androidx.cardview:cardview:1.0.0"
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
